2003-07-22  Peter Stephenson  <pws@csr.com>

	* 18880: Src/Modules/parameter.c: Don't return unset variables
	in whole array value for $parameters.

2003-07-21  Peter Stephenson  <pws@csr.com>

	* 18859: Completion/Base/Core/_description, Doc/Zsh/compsys.yo:
	Allow sort style to be set to false to turn off sorting when
	on by default.

2003-07-21  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18872: Completion/Unix/Command/_java: update javac completion for
	SDK 1.4.x and rename serialvar to serialver

2003-07-20  Clint Adams  <clint@zsh.org>

	* 18874: Completion/Unix/Command/_subversion: PATH can mean
	files too.

2003-07-17  Oliver Kiddle  <opk@zsh.org>

	* 18866: Etc/completion-style-guide: document conventions used
	in completion functions

	* unposted: Completion/Unix/Command/_aap: adjust return code
	in the same way as was done for old completions in 18631

2003-07-17  Peter Stephenson  <pws@csr.com>

	* 18864: Src/lex.c: unnecessary spaces with empty substitutions
	when using ${(Q)...} flag.

2003-07-17  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18863: Completion/Unix/Command/_aap: new completion for aap

2003-07-16  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/Debian/Command/_bug,
	Completion/Debian/Command/_debsign, Completion/Linux/Command/_pkgtool,
	Completion/Unix/Command/_cvs, Completion/Unix/Command/_ecasound,
	Completion/Unix/Command/_mysql_utils,
	Completion/Unix/Command/_perforce, Completion/Unix/Command/_screen:
	remove initial capitalisation from option descriptions

2003-07-09  Oliver Kiddle  <opk@zsh.org>

	* 18841: Completion/Base/Completer/_prefix: work around problem
	where the unambiguous part is empty making the word be removed

2003-07-09  Peter Stephenson  <pws@csr.com>

	* 18839, modified c.f. 18840: Completion/Unix/Command/_nice,
	Completion/Zsh/Command/_precommand: Completion for nice.

	* unposted: Config/version.mk: rebrand as 4.1.1-dev-1 to
	avoid confusion with release version.
